Name:                nicodicbot
Version:             0.1
Synopsis:            nicopedia bot for twitter
-- Description:         
Homepage:            https://github.com/yunomu/nicodicbot
License:             BSD3
License-file:        LICENSE
Author:              Yusuke Nomura <yunomu@gmail.com>
Maintainer:          Yusuke Nomura <yunomu@gmail.com>
-- Copyright:           
Category:            Web, Twitter
Build-type:          Simple
-- Extra-source-files:  
Cabal-version:       >=1.2
Data-Files:          nicodicbot.config.sample

Executable nicodicbot
  Hs-Source-Dirs:    src
  Main-is:           Main.hs
  GHC-Options:       -threaded -Wall -fno-warn-unused-do-bind
  Default-Extensions: OverloadedStrings
  Build-depends:     base
                   , parsec
                   , utf8-string
                   , attoparsec
                   , text
                   , old-locale
                   , time
                   , network
--                   , authenticate-oauth
                   , bytestring
                   , http-conduit
                   , conduit
                   , conduit-extra
                   , transformers
                   , attoparsec-conduit
                   , failure
                   , monad-control
                   , template-haskell
                   , mtl
                   , simple-config
                   , html-conduit
                   , xml-conduit
                   , xml-types
                   , safe
                   , resourcet
                   , lifted-base
                   , concurrent-extra
                   , containers
                   , io-streams
                   , http-streams

--Executable ndpost
--  Hs-Source-Dirs:    src
--  Main-is:           NdPost.hs
--  GHC-Options:       -Wall
--
--  Other-Modules:     Config
--                     Twitter
--                     Article
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         

Source-Repository head
  Type:              git
  Location:          git://github.com/yunomu/nicodicbot.git
  
